--- a/demo/src/main/res/layout-land/activity_main.xml
+++ b/demo/src/main/res/layout-land/activity_main.xml
@@ -22,7 +22,7 @@
     tools:context=".MainActivity">
 
     <com.google.android.cameraview.CameraView
-        android:id="@+id/camera"
+        android:id="@+id/camera_view"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_alignParentLeft="true"
@@ -35,12 +35,12 @@
         android:id="@+id/toolbar"
         android:layout_width="wrap_content"
         android:layout_height="?attr/actionBarSize"
-        android:layout_alignEnd="@id/camera"
+        android:layout_alignEnd="@id/camera_view"
         android:layout_alignParentTop="true"
-        android:layout_alignRight="@id/camera"/>
+        android:layout_alignRight="@id/camera_view"/>
 
     <android.support.design.widget.FloatingActionButton
-        android:id="@+id/take_picture"
+        android:id="@+id/fab_take_picture"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
