--- a/demo/src/main/res/layout/activity_main.xml
+++ b/demo/src/main/res/layout/activity_main.xml
@@ -22,7 +22,7 @@
     tools:context=".MainActivity">
 
     <com.google.android.cameraview.CameraView
-        android:id="@+id/camera"
+        android:id="@+id/camera_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
@@ -40,7 +40,7 @@
         android:layout_alignParentTop="true"/>
 
     <android.support.design.widget.FloatingActionButton
-        android:id="@+id/take_picture"
+        android:id="@+id/fab_take_picture"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
